--- a/Accord/Base.lproj/Main.storyboard
+++ b/Accord/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="40N-e8-RSs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="40N-e8-RSs">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
@@ -15,8 +15,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="xW6-bS-Thd"/>
-                        <segue destination="ud9-TK-Dnc" kind="relationship" relationship="viewControllers" id="mJn-ar-e3l"/>
+                        <segue destination="uEM-Tn-O2h" kind="relationship" relationship="viewControllers" id="xW6-bS-Thd"/>
+                        <segue destination="Uy2-ce-jAk" kind="relationship" relationship="viewControllers" id="mJn-ar-e3l"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zN5-D4-GxS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,7 +26,7 @@
         <!--User-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="User" title="User" id="BYZ-38-t0r" customClass="ViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="User" title="User" id="BYZ-38-t0r" customClass="UserViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -34,18 +34,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHr-kj-9l0">
+                                <rect key="frame" x="52" y="117" width="172" height="86"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="72"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="fjq-Gx-ZTX"/>
+                    <navigationItem key="navigationItem" id="8qT-z0-ilF">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="al0-eG-ica">
+                            <connections>
+                                <action selector="presentUserActions:" destination="BYZ-38-t0r" id="SUn-4E-tAq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="578"/>
+            <point key="canvasLocation" x="-272" y="1350"/>
+        </scene>
+        <!--User Setting View Controller-->
+        <scene sceneID="OZe-6w-kRr">
+            <objects>
+                <viewController storyboardIdentifier="UserSettings" id="KeY-uL-nRX" customClass="UserSettingViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="i8K-X2-rse"/>
+                        <viewControllerLayoutGuide type="bottom" id="q7m-8s-tcR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NhW-mn-ErH">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="geB-m0-Ren" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-272" y="2144"/>
         </scene>
         <!--List-->
         <scene sceneID="WHf-np-qQB">
             <objects>
-                <viewController storyboardIdentifier="List" title="List" id="ud9-TK-Dnc" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="List" title="List" id="ud9-TK-Dnc" customClass="ListViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="c7N-m0-Th7"/>
                         <viewControllerLayoutGuide type="bottom" id="1sm-e7-1cv"/>
@@ -53,13 +86,72 @@
                     <view key="view" contentMode="scaleToFill" id="dUT-NX-OQf">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HEf-3w-NvS">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="HEf-3w-NvS" secondAttribute="trailing" id="11l-cC-uIh"/>
+                            <constraint firstItem="HEf-3w-NvS" firstAttribute="top" secondItem="c7N-m0-Th7" secondAttribute="bottom" id="MmM-QQ-ve9"/>
+                            <constraint firstItem="HEf-3w-NvS" firstAttribute="leading" secondItem="dUT-NX-OQf" secondAttribute="leading" id="pbE-yx-acE"/>
+                            <constraint firstAttribute="bottom" secondItem="HEf-3w-NvS" secondAttribute="bottom" id="qTX-cU-Xrx"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="EsQ-fk-gib"/>
+                    <navigationItem key="navigationItem" id="HPr-Zz-Qi4">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="6pa-Je-fCn">
+                            <connections>
+                                <action selector="presentListActions:" destination="ud9-TK-Dnc" id="rzG-Ku-zH1"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="listsTableView" destination="HEf-3w-NvS" id="rPD-SR-ARr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YI6-Db-crY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="426" y="1350"/>
+        </scene>
+        <!--ToDo-->
+        <scene sceneID="FQj-JX-gYQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Uy2-ce-jAk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="ToDo" id="EsQ-fk-gib"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Zpb-Rb-xLN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ud9-TK-Dnc" kind="relationship" relationship="rootViewController" id="j6U-Cs-3S7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yht-Mg-o50" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="426" y="578"/>
+        </scene>
+        <!--User-->
+        <scene sceneID="Ms6-YN-TR7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uEM-Tn-O2h" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="User" id="fjq-Gx-ZTX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1fK-Ny-hn9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="F9c-u1-hHc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XAf-wd-ZI4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-272" y="578"/>
         </scene>
     </scenes>
 </document>
