Some on the presentation of the settings and working on the UIPresentationController functionality.

--- a/Accord/Base.lproj/Main.storyboard
+++ b/Accord/Base.lproj/Main.storyboard
@@ -69,16 +69,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="pEB-Gb-Crt"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="geB-m0-Ren" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="2144"/>
+            <point key="canvasLocation" x="-272" y="2160"/>
         </scene>
         <!--List-->
         <scene sceneID="WHf-np-qQB">
             <objects>
-                <viewController storyboardIdentifier="List" title="List" id="ud9-TK-Dnc" customClass="ListViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="List" title="List" automaticallyAdjustsScrollViewInsets="NO" id="ud9-TK-Dnc" customClass="ListViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="c7N-m0-Th7"/>
                         <viewControllerLayoutGuide type="bottom" id="1sm-e7-1cv"/>
@@ -94,10 +95,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="HEf-3w-NvS" secondAttribute="trailing" id="11l-cC-uIh"/>
-                            <constraint firstItem="HEf-3w-NvS" firstAttribute="top" secondItem="c7N-m0-Th7" secondAttribute="bottom" id="MmM-QQ-ve9"/>
-                            <constraint firstItem="HEf-3w-NvS" firstAttribute="leading" secondItem="dUT-NX-OQf" secondAttribute="leading" id="pbE-yx-acE"/>
-                            <constraint firstAttribute="bottom" secondItem="HEf-3w-NvS" secondAttribute="bottom" id="qTX-cU-Xrx"/>
+                            <constraint firstAttribute="trailing" secondItem="HEf-3w-NvS" secondAttribute="trailing" id="Fef-vg-IvG"/>
+                            <constraint firstAttribute="bottom" secondItem="HEf-3w-NvS" secondAttribute="bottom" id="Ffc-xy-jct"/>
+                            <constraint firstItem="HEf-3w-NvS" firstAttribute="leading" secondItem="dUT-NX-OQf" secondAttribute="leading" id="hEq-Fe-WI1"/>
+                            <constraint firstItem="HEf-3w-NvS" firstAttribute="top" secondItem="c7N-m0-Th7" secondAttribute="bottom" id="tML-MY-Mky"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="HPr-Zz-Qi4">
