--- a/Accord/SettingCell.xib
+++ b/Accord/SettingCell.xib
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SETTING_CELL" id="9dv-Ds-xfK" customClass="SettingCell" customModule="Accord" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9dv-Ds-xfK" id="gE6-3l-Va5">
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="64G-7h-obJ">
+                        <rect key="frame" x="263" y="6" width="51" height="31"/>
+                    </switch>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GbK-dr-b2y">
+                        <rect key="frame" x="8" y="8" width="42" height="27.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="centerY" secondItem="64G-7h-obJ" secondAttribute="centerY" id="Ced-TT-Po8"/>
+                    <constraint firstItem="GbK-dr-b2y" firstAttribute="top" secondItem="gE6-3l-Va5" secondAttribute="top" constant="8" id="TSU-4f-XLv"/>
+                    <constraint firstItem="GbK-dr-b2y" firstAttribute="leading" secondItem="gE6-3l-Va5" secondAttribute="leading" constant="8" id="Ynh-z4-ANy"/>
+                    <constraint firstAttribute="trailing" secondItem="64G-7h-obJ" secondAttribute="trailing" constant="8" id="oxT-VN-vfm"/>
+                    <constraint firstAttribute="centerY" secondItem="GbK-dr-b2y" secondAttribute="centerY" id="sHs-1Z-msy"/>
+                    <constraint firstAttribute="bottom" secondItem="GbK-dr-b2y" secondAttribute="bottom" constant="8" id="x39-aR-rqA"/>
+                </constraints>
+            </tableViewCellContentView>
+            <connections>
+                <outlet property="settingLabel" destination="GbK-dr-b2y" id="wkQ-FR-4Uy"/>
+                <outlet property="settingSwitch" destination="64G-7h-obJ" id="POM-QS-hEi"/>
+            </connections>
+            <point key="canvasLocation" x="407" y="303"/>
+        </tableViewCell>
     </objects>
 </document>
