--- a/Accord/Base.lproj/Main.storyboard
+++ b/Accord/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="1350"/>
+            <point key="canvasLocation" x="-272" y="1430"/>
         </scene>
         <!--User Setting View Controller-->
         <scene sceneID="OZe-6w-kRr">
@@ -70,11 +70,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="pEB-Gb-Crt"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="geB-m0-Ren" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="2160"/>
+            <point key="canvasLocation" x="-272" y="2240"/>
         </scene>
         <!--List-->
         <scene sceneID="WHf-np-qQB">
@@ -114,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YI6-Db-crY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="426" y="1350"/>
+            <point key="canvasLocation" x="426" y="1430"/>
         </scene>
         <!--ToDo-->
         <scene sceneID="FQj-JX-gYQ">
@@ -133,7 +133,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yht-Mg-o50" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="426" y="578"/>
+            <point key="canvasLocation" x="426" y="658"/>
         </scene>
         <!--User-->
         <scene sceneID="Ms6-YN-TR7">
@@ -152,7 +152,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAf-wd-ZI4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="578"/>
+            <point key="canvasLocation" x="-272" y="658"/>
         </scene>
     </scenes>
 </document>
