--- a/Accord/Base.lproj/Main.storyboard
+++ b/Accord/Base.lproj/Main.storyboard
@@ -56,25 +56,129 @@
             </objects>
             <point key="canvasLocation" x="-272" y="1430"/>
         </scene>
-        <!--User Setting View Controller-->
-        <scene sceneID="OZe-6w-kRr">
+        <!--New List View Controller-->
+        <scene sceneID="6iI-Ce-NjS">
             <objects>
-                <viewController storyboardIdentifier="UserSettings" id="KeY-uL-nRX" customClass="UserSettingViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="i8K-X2-rse"/>
-                        <viewControllerLayoutGuide type="bottom" id="q7m-8s-tcR"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="NhW-mn-ErH">
+                <tableViewController id="aLb-eY-Dn0" customClass="NewListViewController" customModule="Accord" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="JnF-8g-5s5">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="pEB-Gb-Crt"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="geB-m0-Ren" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Wa9-s5-LxV">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wa9-s5-LxV" id="lWx-8i-L9P">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="aLb-eY-Dn0" id="N5r-3t-tVc"/>
+                            <outlet property="delegate" destination="aLb-eY-Dn0" id="9AX-pz-ztE"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c7k-JL-ktF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="2240"/>
+            <point key="canvasLocation" x="-279" y="2196"/>
+        </scene>
+        <!--New Chore View Controller-->
+        <scene sceneID="Fee-Pa-KGI">
+            <objects>
+                <tableViewController id="y4p-M8-XZJ" customClass="NewChoreViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Tqf-BA-Dhv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="QP1-Qx-YOf">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ohw-Bu-o7M">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ohw-Bu-o7M" id="QQC-zF-lPe">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5v2-uc-5Jy">
+                                                    <rect key="frame" x="16" y="0.0" width="584" height="43.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="3cJ-4C-tjw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5v2-uc-5Jy" firstAttribute="top" secondItem="QQC-zF-lPe" secondAttribute="top" id="1Sk-W4-Hz9"/>
+                                                <constraint firstAttribute="trailing" secondItem="5v2-uc-5Jy" secondAttribute="trailing" id="avJ-Xl-gmw"/>
+                                                <constraint firstAttribute="bottom" secondItem="5v2-uc-5Jy" secondAttribute="bottom" id="h8a-6D-ts8"/>
+                                                <constraint firstItem="5v2-uc-5Jy" firstAttribute="leading" secondItem="QQC-zF-lPe" secondAttribute="leading" constant="16" id="zuf-6R-AgB"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vrU-7U-UUu">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vrU-7U-UUu" id="sxl-fk-f63">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Ve-4c-Avf">
+                                                    <rect key="frame" x="16" y="0.0" width="584" height="43.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="9zp-hE-5v7"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="0Ve-4c-Avf" secondAttribute="bottom" id="0vw-s0-frf"/>
+                                                <constraint firstAttribute="trailing" secondItem="0Ve-4c-Avf" secondAttribute="trailing" id="P7K-cl-gVC"/>
+                                                <constraint firstItem="0Ve-4c-Avf" firstAttribute="leading" secondItem="sxl-fk-f63" secondAttribute="leading" constant="16" id="S69-SW-bCH"/>
+                                                <constraint firstItem="0Ve-4c-Avf" firstAttribute="top" secondItem="sxl-fk-f63" secondAttribute="top" id="fNv-OE-zHX"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7D1-J1-6Lr" detailTextLabel="2f0-qq-SIl" style="IBUITableViewCellStyleValue1" id="Dtc-ZM-QmY">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dtc-ZM-QmY" id="tTT-zH-McZ">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7D1-J1-6Lr">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2f0-qq-SIl">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Optional" id="KdA-M9-8Qs">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="8wX-Gg-Rb4">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8wX-Gg-Rb4" id="Yu5-1j-2MB">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="y4p-M8-XZJ" id="970-TK-UCV"/>
+                            <outlet property="delegate" destination="y4p-M8-XZJ" id="gM9-t3-cu2"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vPc-Z5-9pA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="426" y="2196"/>
         </scene>
         <!--List-->
         <scene sceneID="WHf-np-qQB">
