--- a/Accord/Base.lproj/Main.storyboard
+++ b/Accord/Base.lproj/Main.storyboard
@@ -42,6 +42,15 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zyz-Hn-6vJ">
+                                <rect key="frame" x="242" y="285" width="116" height="30"/>
+                                <state key="normal" title="Google Tag Fires">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="fireGoogleTag:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6wl-au-D7k"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -52,6 +61,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="fireOffTag" destination="Zyz-Hn-6vJ" id="yqU-C7-0Zh"/>
+                        <outlet property="firesTag" destination="Zyz-Hn-6vJ" id="z4B-pH-mcl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
